// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/kanban/calculations/KanbanCalculationOptions base case 1`] = `
<div>
  <div
    class="Combobox CalculationOptions"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="CalculationOptions__control"
    >
      <div
        class="CalculationOptions__value-container"
      >
        <div
          class="CalculationOptions__single-value"
        >
          Count
        </div>
        <input
          aria-controls="_r_0_"
          aria-expanded="false"
          autocomplete="off"
          class="CalculationOptions__input"
          readonly=""
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/kanban/calculations/KanbanCalculationOptions with menu open 1`] = `
<div>
  <div
    class="Combobox CalculationOptions"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="CalculationOptions__control"
    >
      <div
        class="CalculationOptions__value-container"
      >
        <div
          class="CalculationOptions__single-value"
        >
          Count
        </div>
        <input
          aria-activedescendant="_r_1_-option-0"
          aria-controls="_r_1_"
          aria-expanded="true"
          autocomplete="off"
          class="CalculationOptions__input"
          readonly=""
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="Combobox__menu CalculationOptions__menu "
    >
      <div
        class="CalculationOptions__menu-list"
        id="_r_1_"
        role="listbox"
      >
        <div
          aria-selected="true"
          class="CalculationOptions__option CalculationOptions__option--is-focused CalculationOptions__option--is-selected"
          id="_r_1_-option-0"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption active"
          >
            <span>
              Count
               
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="_r_1_-option-1"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="_r_1_-option-2"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Not Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="_r_1_-option-3"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Percent Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="_r_1_-option-4"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Percent Not Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="_r_1_-option-5"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Value
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="_r_1_-option-6"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Unique Values
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/kanban/calculations/KanbanCalculationOptions with submenu open 1`] = `
<div>
  <div
    class="Combobox CalculationOptions"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="CalculationOptions__control"
    >
      <div
        class="CalculationOptions__value-container"
      >
        <div
          class="CalculationOptions__single-value"
        >
          Count
        </div>
        <input
          aria-activedescendant="_r_2_-option-6"
          aria-controls="_r_2_"
          aria-expanded="true"
          autocomplete="off"
          class="CalculationOptions__input"
          readonly=""
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="Combobox__menu CalculationOptions__menu "
    >
      <div
        class="CalculationOptions__menu-list"
        id="_r_2_"
        role="listbox"
      >
        <div
          aria-selected="true"
          class="CalculationOptions__option CalculationOptions__option--is-selected"
          id="_r_2_-option-0"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption active"
          >
            <span>
              Count
               
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="_r_2_-option-1"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="_r_2_-option-2"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Not Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="_r_2_-option-3"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Percent Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="_r_2_-option-4"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Percent Not Empty
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option"
          id="_r_2_-option-5"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Value
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
          </div>
        </div>
        <div
          aria-selected="false"
          class="CalculationOptions__option CalculationOptions__option--is-focused"
          id="_r_2_-option-6"
          role="option"
        >
          <div
            class="KanbanCalculationOptions_CustomOption "
          >
            <span>
              Count Unique Values
               
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
            </span>
            <div
              class="dropdown-submenu"
              style="top: -10px; left: 0px;"
            >
              <div
                class="drops "
              >
                <span>
                  Status
                </span>
              </div>
              <div
                class="drops active"
              >
                <span>
                  Property 1
                </span>
              </div>
              <div
                class="drops "
              >
                <span>
                  Property 2
                </span>
              </div>
              <div
                class="drops "
              >
                <span>
                  Property 3
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
